# Memory-Aware-Agentic-AI

./: .env.example  .gitignore  compose.yml  makefile  pyproject.toml  requirements.txt
db/: init.sql
db/init/: init.sql
notebooks/: L2.ipynb  L3.ipynb  L4.ipynb  L5.ipynb  helper.py  utils.py
src/: main.py
src/api/: agent_runtime.py
src/config/: settings.py
src/infrastructure/db/: __init__.py  postgres.py
src/infrastructure/embedding/: embedding_model.py
src/memory/: __init__.py  context_manager.py  memory_manager.py  store_manager.py  tool_box.py
